--- a/style.css
+++ b/style.css
@@ -13,3 +13,12 @@ body {
     text-align: left;
 
 }
+
+.circle {
+    height:  25px;
+    width: 25px;
+    color: white;
+    background-color: rgb(255, 0, 0);
+    border-radius: 50%;
+    display: inline-block;
+}
